--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head>
     <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic.vercel.app/preview.png","button":{"title":"🔮 Ask the Crystal Ball","action":{"type":"launch_frame","name":"Magic Crystal Ball","url":"https://crystal-ball-magic.vercel.app/","splashImageUrl":"https://crystal-ball-magic.vercel.app/icon.png","splashBackgroundColor":"#4C1D95"}}}' />
+    <style>
+        * { margin: 0; padding: 0; }
+        html, body { 
+            width: 100%; 
+            height: 100vh; 
+            background: red; 
+            color: white; 
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>HELLO WORLD</h1>
-    <p>Can you see this text?</p>
+    <div>HELLO WORLD - RED BACKGROUND</div>
 </body>
 </html>
