--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Magic Crystal Ball</title>
     
     <!-- Farcaster Mini App Meta Tags -->
-    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic.vercel.app/preview.png","button":{"title":"Ask the Crystal Ball","action":{"type":"launch_frame","name":"Magic Crystal Ball","url":"https://crystal-ball-magic.vercel.app/"}}}' />
+    <meta name="fc:frame" content="{&quot;version&quot;:&quot;next&quot;,&quot;imageUrl&quot;:&quot;https://crystal-ball-magic.vercel.app/preview.png&quot;,&quot;button&quot;:{&quot;title&quot;:&quot;🔮 Ask the Crystal Ball&quot;,&quot;action&quot;:{&quot;type&quot;:&quot;launch_frame&quot;,&quot;name&quot;:&quot;Magic Crystal Ball&quot;,&quot;url&quot;:&quot;https://crystal-ball-magic.vercel.app/&quot;}}}" />
     
     <style>
         * {
