--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>🔮 Mystic Crystal Ball</title>
     
     <!-- Farcaster Mini App Meta Tags -->
-    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/preview.png","button":{"title":"🔮 Ask the Crystal Ball","action":{"type":"launch_frame","name":"Mystic Crystal Ball","url":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/","splashImageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/splash.png","splashBackgroundColor":"#667eea"}}}' />
+    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/preview.png?v=2","button":{"title":"🔮 Ask the Crystal Ball","action":{"type":"launch_frame","name":"Mystic Crystal Ball","url":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/","splashImageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/splash.png","splashBackgroundColor":"#667eea"}}}' />
 </head>
 <body>
     <div id="root"></div>
