--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🔮 Mystic Crystal Ball</title>
+    <title>🔮 Magic Crystal Ball</title>
     
     <!-- Farcaster Mini App Meta Tags -->
-    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/preview.png?v=2","button":{"title":"🔮 Ask the Crystal Ball","action":{"type":"launch_frame","name":"Mystic Crystal Ball","url":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/","splashImageUrl":"https://crystal-ball-magic-flexasaurusrexs-projects.vercel.app/splash.png","splashBackgroundColor":"#667eea"}}}' />
+    <meta name="fc:frame" content='{"version":"next","imageUrl":"https://crystal-ball-magic.vercel.app/preview.png?v=3","button":{"title":"🔮 Ask the Crystal Ball","action":{"type":"launch_frame","name":"Magic Crystal Ball","url":"https://crystal-ball-magic.vercel.app/","splashImageUrl":"https://crystal-ball-magic.vercel.app/splash.png","splashBackgroundColor":"#667eea"}}}' />
 </head>
 <body>
     <div id="root"></div>
